Sat Mar 14 14:16:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (ruby_strdup, Balloc, rv_alloc): use size_t.

Sat Mar 14 13:53:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (ruby_qsort): the result of cmp must be signed, so ge
	  rid of reuse of a variable.

Sat Mar 14 10:56:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.c (init_funcname_len, dln_find_exe_r, dln_find_file_r): use
	  size_t.

	* file.c (rb_stat_inspect, file_expand_path): ditto.

	* util.c (ruby_qsort): ditto.

Sat Mar 14 10:39:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (CXX_EXT): checks for case-sensitive filesystem with
	  FNM_SYSCASE rather than build_os.

Fri Mar 13 23:03:40 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/init.c (wait_connectable0): remove unreachable code.

Fri Mar 13 23:00:02 2009  Tanaka Akira  <akr@fsij.org>

	* configure.in (RUBY_CHECK_SIZEOF): pass [include] to AC_CHECK_SIZEOF.

Fri Mar 13 20:58:11 2009  Tanaka Akira  <akr@fsij.org>

	* dln.c (dln_find_1): compare fspace in size_t world.

Fri Mar 13 18:58:04 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (CFLAGS, CXXFLAGS): moved after warnflags.

Fri Mar 13 18:10:06 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_throw_obj): inverted call flow.  [ruby-core:22872]

Fri Mar 13 17:04:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (bool): not define to get rid of conflic
	  against curses.

Fri Mar 13 16:45:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/openssl_missing.h (i2d_of_void): cast for callbacks.
	  [ruby-core:22860]

	* ext/openssl/ossl_engine.c (ossl_engine_s_by_id): suppress a
	  warning.

	* ext/openssl/ossl_ssl.c (ossl_sslctx_flush_sessions): time_t may
	  be larger than long.

	* ext/openssl/ossl_ssl_session.c (ossl_ssl_session_get_time),
	  (ossl_ssl_session_get_timeout): use TIMET2NUM() to conver
	  time_t.

Fri Mar 13 15:10:43 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
